--- a/Portfolio-website/styles/about.css
+++ b/Portfolio-website/styles/about.css
@@ -199,6 +199,12 @@ button:hover{
     transform: scale(1.05);
     background-color: #2e83dd;
 }
+.copyright{
+    position: fixed;
+    bottom: 0;
+    font-size: 12px;
+    color: #c7c7c7;
+}
 
 @media (max-width: 500px){
     body{
