--- a/Portfolio-website/styles/home.css
+++ b/Portfolio-website/styles/home.css
@@ -217,6 +217,13 @@ img{
     object-fit: cover;
     
 }
+.copyright{
+    position: fixed;
+    bottom: 0;
+    font-size: 12px;
+    color: #0a192f;
+    justify-self: center;
+}
 
 @media (max-width: 600px){
     .project-cards{
@@ -285,5 +292,5 @@ img{
     }  
     .description{
         margin-top: 10px;
-    } 
+    }
 }
