--- a/Portfolio-website/styles/about.css
+++ b/Portfolio-website/styles/about.css
@@ -199,6 +199,11 @@ button:hover{
     transform: scale(1.05);
     background-color: #2e83dd;
 }
+.copyright-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .copyright{
     position: fixed;
     bottom: 0;
