--- a/Portfolio-website/styles/projects.css
+++ b/Portfolio-website/styles/projects.css
@@ -121,6 +121,17 @@ img{
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
 }
+.copyright-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.copyright{
+    position: fixed;
+    bottom: 0;
+    font-size: 12px;
+    color: #0a192f;
+}
 
 @media (max-width: 700px){
     .project-cards{
